--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "scripts": {
     "start": "webpack serve --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
@@ -14,6 +15,7 @@
     "globals": "^15.14.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.96.1",
